# wdm

./: README.md  plaintext.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
app/: main.py
app/gui/: main_window.py  widgets.py
tests/: test_app.py
